--- a/gallery.html
+++ b/gallery.html
@@ -63,10 +63,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <li class="menu-item current-menu-item ">
                <a href="gallery.html">Gallery</a>
 
@@ -141,10 +141,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!-- <li class="menu-item">
                <a href="team.html">Event</a>
 
