--- a/blog-single-post.html
+++ b/blog-single-post.html
@@ -60,10 +60,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!--<li class="menu-item">
 					<a href="team.html">Event</a>
 	 
@@ -141,10 +141,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!-- <li class="menu-item">
 					<a href="team.html">Event</a>
 
