--- a/blog.html
+++ b/blog.html
@@ -63,10 +63,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!--<li class="menu-item">
 					<a href="team.html">Event</a>
 	 
@@ -144,10 +144,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!-- <li class="menu-item">
 					<a href="team.html">Event</a>
 
