--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <li class="menu-item ">
                <a href="gallery.html">Gallery</a>
 
@@ -136,10 +136,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!--<li class="menu-item">
                <a href="team.html">Event</a>
 
