--- a/menu.html
+++ b/menu.html
@@ -89,10 +89,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!--<li class="menu-item">
 					<a href="team.html">Event</a>
 	 
@@ -170,10 +170,10 @@
                <a href="catering.html">Catering </a>
 
             </li>
-            <!-- <li class="menu-item">
-               <a href="gift-card.html">Gift Card</a>
+            <li class="menu-item">
+					<a href="http://Toasttab.com/zaika/giftcards">Gift Card</a>
 
-            </li> -->
+				</li> 
             <!-- <li class="menu-item">
                <a href="team.html">Event</a>
 
